--- a/client/src/pages/Home/styles.css
+++ b/client/src/pages/Home/styles.css
@@ -1,12 +1,20 @@
-html,body,#root{
+/* html,body,#root{
     background-color: black;
     color: white;
 
-}
+} */
 @keyframes waveEffect {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
-    100% { transform: translateY(0); }
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .wave-text {
@@ -22,6 +30,7 @@ html,body,#root{
     display: inline-block;
     animation: waveEffect 1s ease-in-out infinite;
 }
+
 .info {
     position: relative;
     overflow: hidden;
@@ -41,7 +50,7 @@ html,body,#root{
     z-index: 0;
 }
 
-.info > div {
+.info>div {
     position: relative;
     z-index: 1;
 }
